# whisp2

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md
.claude/skills/falsify-with-disposable-harness/: SKILL.md
.claude/skills/falsify-with-disposable-harness/evals/: evals.json
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffi.rs  lib.rs  main.rs  test_support.rs
src-tauri/src/app_context/: mod.rs
src-tauri/src/audio/: capture.rs  mod.rs  sound.rs  volume.rs
src-tauri/src/commands/: audio.rs  config.rs  diagnostics.rs  dictionary.rs  history.rs  hud.rs  mod.rs  model_download.rs  permissions.rs  shortcut.rs
src-tauri/src/config/: models.rs  persistence.rs
src-tauri/src/correction/: dictionary.rs  mod.rs  semantic.rs
src-tauri/src/daemon/: process.rs  rpc.rs
src-tauri/src/history/: models.rs  store.rs
src-tauri/src/hotkey/: event_tap.rs  mod.rs  mode.rs
src-tauri/src/hud/: panel.rs
src-tauri/src/injection/: mod.rs  text.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/permissions/: mod.rs
src-tauri/src/transcription/: manager.rs  mod.rs
src-tauri/src/transcription/providers/: gemini.rs  local_whisper.rs  mod.rs  openai.rs
src-ui/: hud.html  index.html  package-lock.json  package.json  vite.config.ts
src-ui/src/: App.css  App.tsx  Onboarding.css  Onboarding.tsx  hud.css  hud.ts  index.css
tasks/: lessons.md  run-dev.sh  todo.md
